# openpup

./: .env.example  .gitignore  README.md  pyproject.toml
src/openpup/: access.py  agent_def.py  agent_host.py  agent_tools.py  agentic.py  browser_tools.py  cli.py  config.py  config_store.py  directory.py  governance.py  logging_setup.py  memory.py  prompting.py  runtime.py  schedule_tools.py  sessions.py  transcripts.py  webserver.py
src/openpup/heartbeat/: curator.py  engine.py  outreach.py  reflect.py  routines.py  scheduler.py
src/openpup/messaging/: envelope.py
src/openpup/security/: __init__.py  approval.py  redact.py  skills_guard.py  threats.py  url_safety.py
src/openpup/setup/: __init__.py  validators.py  wizard.py
src/openpup/skills/: __init__.py  loader.py  store.py  tool.py
src/openpup/tui/: __init__.py  env_store.py  menus.py  persona.py  roster.py  schedules.py  select.py
tests/: test_access.py  test_agent_def.py  test_agent_host_retry.py  test_agent_tools.py  test_agentic.py  test_approval.py  test_browser_tools.py  test_config_store.py  test_contact_memory.py  test_curator.py  test_directory.py  test_env_store.py  test_governance.py  test_heartbeat_scheduler.py  test_imessage.py  test_integration_adapters.py  test_kennel_root.py  test_logging_setup.py  test_owner_config.py  test_persona.py  test_prompting.py  test_redact.py  test_schedule.py  test_schedules_view.py  test_session_recording.py  test_session_search_tool.py  test_sessions.py  test_setup_validators.py  test_skill_tool.py  test_skills_guard.py  test_skills_store.py  test_threats.py  test_typing_indicator.py  test_universal_constructor.py  test_url_safety.py
