[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openpup"
version = "0.1.0"
description = "An always-on AI companion: code-puppy SDK + memory + a consciousness heartbeat + messaging integrations (Discord, Telegram, WhatsApp, Email, SMS)."
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = { text = "MIT" }
authors = [{ name = "Michael Pfaffenberger" }]
keywords = ["ai", "agent", "companion", "code-puppy", "discord", "telegram", "whatsapp", "heartbeat"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "code-puppy>=0.0.547",
    "httpx>=0.24.1",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.4.2",
    "prompt-toolkit>=3.0.52",
]

[project.optional-dependencies]
discord = ["discord.py>=2.3.0"]
telegram = ["python-telegram-bot>=21.0"]
email = ["aiosmtplib>=3.0.0", "imap-tools>=1.5.0"]
sms = ["twilio>=9.0.0"]
web = ["fastapi>=0.110.0", "uvicorn>=0.29.0"]
browser = ["cloakbrowser>=0.3.31"]
all = [
    "discord.py>=2.3.0",
    "python-telegram-bot>=21.0",
    "aiosmtplib>=3.0.0",
    "imap-tools>=1.5.0",
    "twilio>=9.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "cloakbrowser>=0.3.31",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.23.1",
    "ruff>=0.11.11",
]

[project.scripts]
openpup = "openpup.cli:app"

[project.urls]
repository = "https://github.com/mpfaffenberger/openpup"
homepage = "https://github.com/mpfaffenberger/openpup"

[tool.hatch.build.targets.wheel]
packages = ["src/openpup"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src"]
